Archive2/af/f0aae8be62ef95/output
main.cpp: In function 'int main()':
main.cpp:18:5: error: 'vector' is not a member of 'std'
     std::vector<pnt> v { {10,0 },{10,1 },{9,0 },{8,0 },{7,0 },{5,1 },{5,0 },{3,1 },{4,0 },{4,1 },{3,1 } };
     ^
main.cpp:18:20: error: expected primary-expression before '>' token
     std::vector<pnt> v { {10,0 },{10,1 },{9,0 },{8,0 },{7,0 },{5,1 },{5,0 },{3,1 },{4,0 },{4,1 },{3,1 } };
                    ^
main.cpp:18:22: error: 'v' was not declared in this scope
     std::vector<pnt> v { {10,0 },{10,1 },{9,0 },{8,0 },{7,0 },{5,1 },{5,0 },{3,1 },{4,0 },{4,1 },{3,1 } };
                      ^
main.cpp:20:18: error: range-based 'for' loops are not allowed in C++98 mode
     for (pnt p : boost::unique(boost::sort(v)))
                  ^
